--- a/gb/24/5/27/n14258690.md
+++ b/gb/24/5/27/n14258690.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>菲利蒙市签署第一个无家可归者计划? 争议部分待解决</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258697-ac61f3d351aef4b82e8490b5417d1232-600x400.jpeg" />
 <h6>5月21日晚，菲利蒙（Fremont）市议会讨论“无家可归者应对策略计划(Homeless Response Strategic Plan，HRSP)”草案，市议会计划在当晚通过该草案。（李沁一/大纪元）
@@ -9,25 +9,25 @@
 	<p>【大纪元2024年05月28日讯】（大纪元记者李沁一菲利蒙报导）5月21日（上周二）晚，菲利蒙（Fremont）市议会讨论“无家可归者应对策略计划(Homeless Response Strategic Plan，HRSP)”草案，该草案已进行到第4阶段，市议会计划在当晚通过该草案。</p>
 <p>5月24日（上周五）下午5点，记者从市府邮件获知，市议会在5月21日晚已经通过HRSP草案，签署后定名为“无家可归者应对计划（Homelessness Response Plan，HRP）。这是该市对无家可归者问题签署的第一个计划，将指导、解决未来5年的政策、投资和行动。</p>
 <p>在5月21日晚，市议会听众席座无虚席，超过100名居民到场聆听。市府官员用约4小时，讨论、听取HRSP草案的内容和数据分析。因为有过半数听众不赞同，所以会议进入听证会阶段。</p>
-<figure id="attachment_14258691" aria-describedby="caption-attachment-14258691" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258691-F02.jpg"><img class="size-large wp-image-14258691" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258691-F02-600x332.jpg" alt="" width="600" b="332" /></a><figcaption id="caption-attachment-14258691" class="wp-caption-text">5月21日晚，市议员Teresa Cox询问Elaine de Coligny：“是否了解Irvington公园情况及附近居民的困扰，是否亲自去那些RV车查看难过？”（李沁一/大纪元）</figcaption></figure>
+<figure id="attachment_14258691" aria-describedby="caption-attachment-14258691" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258691-F02.jpg"><img decoding="async" class="size-large wp-image-14258691" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258691-F02-600x332.jpg" alt="" width="600" b="332" /></a><figcaption id="caption-attachment-14258691" class="wp-caption-text">5月21日晚，市议员Teresa Cox询问Elaine de Coligny：“是否了解Irvington公园情况及附近居民的困扰，是否亲自去那些RV车查看难过？”（李沁一/大纪元）</figcaption></figure>
 <p>该晚出席会议的官员有菲利蒙市长高叙加（Lily Mei）、副市长邵阳（在线出席），市议员Teresa Cox、Jenny Kassan、Raj Salwan、Desrie Campbell、黄洁宜（Teresa Keng），HRSP城市经理Laurie Flores，城市副经理Allen Demers及部分市府职员。</p>
 <h2>居民听众对HRSP草案的争议点</h2>
 <p>居民听众的争议点主要集中在：RV（Recreational Vehicle）车也就是人们通常说的房车，停靠位置、长期停靠、影响居民、环境等问题，在HRSP草案中提及的解决方法不够。他们希望最好包含如何清理，或者具体规划RV车辆停靠、安全管理等内容。</p>
 <p>菲利蒙Irvington公园是一个面积开阔，适合附近居民休息娱乐的公共场所。受COVID疫情影响，停靠在此的无家可归者房车增多，带来不清洁等环境问题。</p>
 <p>居民Albert说：“我们已经处理公园的房车问题两年了，而不仅仅是1年。 这些房车来了又走，我观察到有一辆是1月5日搬来的。4 月 2 日我们有了一项法令，禁止在学校和公园附近的停车场停靠超过6英尺高的车辆。 但是，4月底清理之后，又有4辆房车停过来。”</p>
 <p>居民Shiv Kumar对大纪元表示：“这些车辆停靠在路边，影响其他车辆停靠，影响行人通过，孩子们玩球也非常不方便、不舒服。”</p>
-<figure id="attachment_14258694" aria-describedby="caption-attachment-14258694" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258694-F05.png"><img class="size-large wp-image-14258694" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258694-F05-600x315.png" alt="" width="600" b="315" /></a><figcaption id="caption-attachment-14258694" class="wp-caption-text">5月21日晚，Irvington公园附近居民Shiv Kumar发言时使用的照片，他的发言让听众们鼓掌赞同。（李沁一/大纪元）</figcaption></figure>
+<figure id="attachment_14258694" aria-describedby="caption-attachment-14258694" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258694-F05.png"><img decoding="async" class="size-large wp-image-14258694" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258694-F05-600x315.png" alt="" width="600" b="315" /></a><figcaption id="caption-attachment-14258694" class="wp-caption-text">5月21日晚，Irvington公园附近居民Shiv Kumar发言时使用的照片，他的发言让听众们鼓掌赞同。（李沁一/大纪元）</figcaption></figure>
 <p>居民伍晓文对大纪元说：“通过这样的条文，一年后，或者更久后会发现，没有作用！只是增加了财政支出。”</p>
 <p>一位女士居民说：“我接受了NBC新闻采访，在我家附近停靠的房车，用小型发电机发电，排放有毒气体，我的孩子有呼吸疾病，有毒气体会影响到健康。还有，发电机的噪音让我不得不紧闭窗户。我是缴纳了很多税款的人，认为菲利蒙能带给人好的生活环境，才选择来居住。可是房车的噪音和垃圾让我痛苦。”</p>
 <p>市议员Teresa Cox在NBC采访中说，RV车辆沿街停靠，在公共停车区域内，没有违反停车规则。工作人员在寻找解决RV停车规则的办法。</p>
-<figure id="attachment_14258695" aria-describedby="caption-attachment-14258695" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258695-a6c4cead0566d5f1318e81a3f8646aa8.jpeg"><img class="size-large wp-image-14258695" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258695-a6c4cead0566d5f1318e81a3f8646aa8-600x800.jpeg" alt="" width="600" b="800" /></a><figcaption id="caption-attachment-14258695" class="wp-caption-text">5月21日晚，居民伍晓文接受大纪元采访，他非常关心自己居住的社区和城市，望多通过解决民生的提案。（李沁一/大纪元）</figcaption></figure>
+<figure id="attachment_14258695" aria-describedby="caption-attachment-14258695" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258695-a6c4cead0566d5f1318e81a3f8646aa8.jpeg"><img decoding="async" class="size-large wp-image-14258695" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258695-a6c4cead0566d5f1318e81a3f8646aa8-600x800.jpeg" alt="" width="600" b="800" /></a><figcaption id="caption-attachment-14258695" class="wp-caption-text">5月21日晚，居民伍晓文接受大纪元采访，他非常关心自己居住的社区和城市，望多通过解决民生的提案。（李沁一/大纪元）</figcaption></figure>
 <h2>无家可归者应对计划（HRP）、官员见解</h2>
 <p>2023 年 5 月 2 日，市议会同意与 EdeColigny Consulting公司合作，制定菲利蒙的无家可归者应对计划，制定计划的资金为112,000 美元。</p>
 <p>5月21日晚，由Elaine de Coligny代表EdeColigny Consulting公司做HRSP内容介绍。城市经理Laurie Flores和城市副经理Allen Demers做内容解释及补充。</p>
-<figure id="attachment_14258692" aria-describedby="caption-attachment-14258692" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258692-55ecf4366f25d19c09506a22204391a1.jpeg"><img class="size-large wp-image-14258692" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258692-55ecf4366f25d19c09506a22204391a1-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14258692" class="wp-caption-text">5月21日晚，Elaine de Coligny代表EdeColigny Consulting公司做HRSP内容介绍。（李沁一/大纪元）</figcaption></figure>
+<figure id="attachment_14258692" aria-describedby="caption-attachment-14258692" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258692-55ecf4366f25d19c09506a22204391a1.jpeg"><img decoding="async" class="size-large wp-image-14258692" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258692-55ecf4366f25d19c09506a22204391a1-600x450.jpeg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14258692" class="wp-caption-text">5月21日晚，Elaine de Coligny代表EdeColigny Consulting公司做HRSP内容介绍。（李沁一/大纪元）</figcaption></figure>
 <p>根据HRSP（签署后更名为HRP），2024 年菲利蒙市至少有 809 人无家可归，其中 195 人（24%）有庇护所，614 人（76%）无庇护所。 过去两年，该市无家可归者总数减少了 21%。 这些无家可归者主要来自其他城市和地区。</p>
 <p>越来越多的无家可归者选择住在汽车里，现在，菲利蒙市66%的无庇护所居民或56%的无家可归者居住在汽车、货车或房车中。这些人一旦居住汽车，就很难再租住房屋。</p>
-<figure id="attachment_14258693" aria-describedby="caption-attachment-14258693" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258693-c75d373af9cf070b2708b16b8b911d10.jpeg"><img class="size-large wp-image-14258693" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258693-c75d373af9cf070b2708b16b8b911d10-600x323.jpeg" alt="" width="600" b="323" /></a><figcaption id="caption-attachment-14258693" class="wp-caption-text">越来越多的无家可归者选择住在RV房车中，给公园及附近居民带来困扰。图为圣荷西市一开阔公园，停靠路边几个月的房车中一辆。（李沁一/大纪元）</figcaption></figure>
+<figure id="attachment_14258693" aria-describedby="caption-attachment-14258693" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14258693-c75d373af9cf070b2708b16b8b911d10.jpeg"><img decoding="async" class="size-large wp-image-14258693" src="https://i.epochtimes.com/assets/uploads/2024/05/id14258693-c75d373af9cf070b2708b16b8b911d10-600x323.jpeg" alt="" width="600" b="323" /></a><figcaption id="caption-attachment-14258693" class="wp-caption-text">越来越多的无家可归者选择住在RV房车中，给公园及附近居民带来困扰。图为圣荷西市一开阔公园，停靠路边几个月的房车中一辆。（李沁一/大纪元）</figcaption></figure>
 <p>比如，NBC新闻提到的RV车居住者说，开始住车里的原因是丈夫失业了，后来丈夫找到工作了，也考虑过寻找公寓租住，但是住车里能省下钱，给3个孩子买更多食物和文具。</p>
 <p>下面是EdeColigny Consulting公司给出数据分析的部分摘录：</p>
 <p>2022年7月1日～2023年6月30日，据估计该市有2,050人无家可归。老年人所占比例越来越大，在PIT Count政府数据中，占受访者的18%。白人所占比例也过高，占该市无家可归者的47%。一旦离开住所成为无家可归者，返回住房就更加困难。</p>
@@ -45,35 +45,34 @@
 <p>责任编辑：宋佳怡</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229510.md#1">圣地亚哥市56亿预算 重点含游民和修路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229674.md#1">加州游民在高速路旁建临时房屋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/21/n14230257.md#1">无家可归者在悉尼西南商业区扎营 惹商家不满</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14231897.md#1">限制游民露宿公园是否违宪 美最高院将裁决</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/19/n14229510.md#1">圣地亚哥市56亿预算 重点含游民和修路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/20/n14229674.md#1">加州游民在高速路旁建临时房屋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/21/n14230257.md#1">无家可归者在悉尼西南商业区扎营 惹商家不满</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14231897.md#1">限制游民露宿公园是否违宪 美最高院将裁决</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/9/n10204699.md#1" target="_blank">古玉文：消灭私有制不是出路（中）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/27/n3973738.md#1" target="_blank">净仁：通向人类生命的真正幸福</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/28/n11751194.md#1" target="_blank">【2019盘点】响彻世界政坛的正义之声</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/15/n14251190.md#1">康熙皇帝和《红楼梦》（二）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14256907.md#1">前美军上校：外星人确实存在 并与人类互动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/20/n14254211.md#1">【未解之谜】三朝国师为何决心不再转世？七世章嘉之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/3/n14239818.md#1">苏轼相交一世的表亲知己：墨竹画家文同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/21/n14254809.md#1">不做牛做狗任人宰割 人生要做好一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257439.md#1">【车评】两种模式 两种个性 2024 Mercedes-AMG GLA 35 4MATIC</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257803.md#1">【马克时空】精准炸弹谁更强 美国 vs 俄国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257479.md#1">【时事金扫描】十万人怒吼 台扩权法案细节惊心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257494.md#1">中共军心生变？中部战区流传一句话辱习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257617.md#1">徐客：向袁红冰爆料 难以撼动的红二代是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257440.md#1">中国至少29城市地铁全亏损 总负债4.3万亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14257393.md#1">杨幂新剧翻车 再度演狐妖 滤镜夸张登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14257426.md#1">台艺人转发中共统战帖文 周杰伦为何是个例外</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/24/n14257419.md#1">张兰爆“孙子遭退学”汪小菲罕见反驳是转学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257779.md#1">陈奕迅突宣布取消演唱会 开场前含泪鞠躬道歉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/25/n14257797.md#1">第77届戛纳电影节落幕 《阿诺拉》摘金棕榈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/22/n14255717.md#1">桑葚抗癌降血脂还减肥 3类人小心吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/26/n14257937.md#1">飞机遇到乱流的风险有多大？ 应该担心吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/23/n14256645.md#1">杀菌除螨 床单该怎么洗？生物学家教你4技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/21/n14254842.md#1">睡眠不好？夜间饮食可能是罪魁祸首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/5/22/n14255559.md#1">成功人士养成记 ：先让孩子的内心强大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/27/n14258690.htm">菲利蒙市签署第一个无家可归者计划? 争议部分待解决</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/5/27/n14258690.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/5/27/n14258690.htm">菲利蒙市签署第一个无家可归者计划? 争议部分待解决</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258690.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
